--- a/frontend/src/components/Product/Cart.css
+++ b/frontend/src/components/Product/Cart.css
@@ -187,3 +187,36 @@
         transform: rotate(360deg);
     }
 }
+
+.form-check-input[type=checkbox] {
+    border-radius: .25em;
+    border: 1.5px solid #5555;
+}
+
+.form-check-input:checked {
+    background-color: #FF6F91;
+    border-color: #FF6F91;
+}
+
+.btn-secondary {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #FF6F91;
+    --bs-btn-border-color: #FF6F91;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #FF6F91;
+    --bs-btn-hover-border-color: #FF6F91;
+    --bs-btn-focus-shadow-rgb: 130, 138, 145;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #FF6F91;
+    --bs-btn-active-border-color: #FF6F91;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #FF6F91;
+    --bs-btn-disabled-border-color: #FF6F91;
+}
+
+
+.btn-secondary {
+    background-color: #FF6F91;
+    color: #fff;
+}
