--- a/frontend/src/components/header/HomeProduct.css
+++ b/frontend/src/components/header/HomeProduct.css
@@ -1,6 +1,7 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 @import "swiper/css";
 @import 'swiper/css/pagination';
+
 .home__product {
     background-color: #ff85a1;
 
@@ -241,9 +242,10 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-   
+
 }
-.swiper-pagination{
+
+.swiper-pagination {
     opacity: 0;
 }
 
@@ -304,19 +306,66 @@ body {
 .quick__post-container .quick__post-link:hover {
     text-decoration: none;
 }
+
 /* styles.css */
 
+/* Button style (nếu cần) */
 .common-view-all-btn {
-    background-color: #ff6f91!important;
-    color: #fff!important;
-    padding: 6px 12px!important;
-    font-size: 1rem!important;
-    font-weight: 600!important;
-    border: 1px solid #FF6F91!important;
-    border-radius: 15px!important;
-    transition: background-color 0.3s ease!important;
+    background-color: #ff6f91 !important;
+    color: #fff !important;
+    padding: 6px 12px !important;
+    font-size: 1rem !important;
+    font-weight: 600 !important;
+    border: 1px solid #FF6F91 !important;
+    border-radius: 15px !important;
+    transition: background-color 0.3s ease !important;
 }
 
 .common-view-all-btn:hover {
-    background-color: #e65c80!important;
+    background-color: #e65c80 !important;
+}
+
+.rotating-container {
+    display: inline-block;
+    animation: spin 10s linear infinite;
+}
+
+/* Keyframes cho hiệu ứng xoay */
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.animated-words {
+    position: relative;
+    display: inline-block;
+    height: 1.6em;
+    vertical-align: bottom;
+    overflow: hidden;
+}
+
+.animated-words span {
+    display: block;
+    animation: animateWords 10s infinite ease-in-out;
+    font-size: 23px !important;
+    padding: 0 !important;
+    font-family: "Black Ops One", serif;
+    font-style: normal;
+    color: #FF6F91;
+}
+
+
+@keyframes animateWords {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-400%);
+    }
 }
