--- a/frontend/src/styles/Orders.css
+++ b/frontend/src/styles/Orders.css
@@ -79,3 +79,7 @@
     border-color: #FFF8DC !important;
     color: #fff;
 }
+.css-hlbajn-MuiRating-label {
+    font-size: 30px;
+    cursor: inherit;
+}
